--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui sint dolore harum expedita! Explicabo voluptates, maiores dolor ullam enim eum doloremque. Sunt autem vel minima.</p> 
+   <h1>DRUVITHA</h1> 
 </body>
 </html>
